--- a/app/styles/_map_menu.scss
+++ b/app/styles/_map_menu.scss
@@ -38,6 +38,9 @@ nav.menu {
     color: #fff;
     font-size: 30px;
     outline: none;
+    text-align: center;
+    padding: 0;
+    line-height: 0;
   }
 
   ul {
